FTB-Community/force-app/main/default/objects/FTB_CMT_Configurations__mdt/FTB_CMT_Configurations__mdt.object-meta.xml
<CustomObject>
    <description>FTB Custom Metadata Type for component configurations</description>
    <label>Configuration</label>
    <pluralLabel>Configurations</pluralLabel>
</CustomObject>