FTB-Community/force-app/main/default/objects/FTB_CMT_Configurations__mdt/fields/FTB_Component__c.field-meta.xml
<CustomField>
    <fullName>FTB_Component__c</fullName>
    <label>Component</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FtbStartPage</fullName>
                <default>true</default>
                <label>FtbStartPage</label>
            </value>
            <value>
                <fullName>FtbLogin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>