FTB-Community/force-app/main/default/objects/FTB_CMT_Configurations__mdt/fields/FTB_Message__c.field-meta.xml
<CustomField>
    <fullName>FTB_Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>