FTB-Community/force-app/main/default/objects/FTB_CMT_Configurations__mdt/fields/FTB_Type__c.field-meta.xml
<CustomField>
    <fullName>FTB_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Header</fullName>
                <default>true</default>
                <label>Header</label>
            </value>
            <value>
                <fullName>Tile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>